2008-09-05	Eric Norum <norume@aps.anl.gov>

	* libfs/src/nfsclient/src/rpcio.c: Correct breakage introduced by Joel
	removing asserts with side-effects.

2008-09-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sapi/include/rtems/config.h,
	sapi/inline/rtems/chain.inl,
	sapi/inline/rtems/extension.inl,
	sapi/src/debug.c,
	sapi/src/extension.c,
	sapi/src/ioregisterdriver.c: Convert to "bool".
	* rtems/src/clocktodvalidate.c,
	rtems/src/intrbody.c,
	rtems/src/msgmp.c,
	rtems/src/msgqcreate.c,
	rtems/src/msgqreceive.c,
	rtems/src/partmp.c,
	rtems/src/regionmp.c,
	rtems/src/semmp.c,
	rtems/src/signalsend.c,
	rtems/src/taskcreate.c,
	rtems/src/taskmode.c,
	rtems/src/taskmp.c,
	rtems/src/tasks.c,
	rtems/src/timerserver.c,
	rtems/src/workspace.c: Convert to "bool".
	* rtems/inline/rtems/rtems/asr.inl,
	rtems/inline/rtems/rtems/attr.inl,
	rtems/inline/rtems/rtems/barrier.inl,
	rtems/inline/rtems/rtems/dpmem.inl,
	rtems/inline/rtems/rtems/eventset.inl,
	rtems/inline/rtems/rtems/message.inl,
	rtems/inline/rtems/rtems/modes.inl,
	rtems/inline/rtems/rtems/options.inl,
	rtems/inline/rtems/rtems/part.inl,
	rtems/inline/rtems/rtems/ratemon.inl,
	rtems/inline/rtems/rtems/region.inl,
	rtems/inline/rtems/rtems/sem.inl,
	rtems/inline/rtems/rtems/status.inl,
	rtems/inline/rtems/rtems/support.inl,
	rtems/inline/rtems/rtems/tasks.inl,
	rtems/inline/rtems/rtems/timer.inl: Convert to "bool".
	* rtems/include/rtems/rtems/asr.h,
	rtems/include/rtems/rtems/clock.h,
	rtems/include/rtems/rtems/config.h,
	rtems/include/rtems/rtems/object.h,
	rtems/include/rtems/rtems/sem.h,
	rtems/include/rtems/rtems/support.h: Convert to "bool".
	* score/src/corebarrierwait.c,
	score/src/coremsg.c,
	score/src/coremsginsert.c,
	score/src/coremsgseize.c,
	score/src/coremsgsubmit.c,
	score/src/coremutexseize.c,
	score/src/corerwlockobtainread.c,
	score/src/corerwlockobtainwrite.c,
	score/src/coresemseize.c,
	score/src/corespinlockwait.c,
	score/src/heapfree.c,
	score/src/heapresizeblock.c,